--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ SHIVAY FASHION STUDIO
 		   <div class="title">
 		   <h1>SHIVAY FASHION STUDIO
 		   </h1><br><br><br>
-		   <h2>Adress : G-1 , Aditraj Arced , Opp Tcc Mall , Nr Sima<br> Hall , 100 Feet Road , Sattelite , Ahmedabad , Gujarat 
+		   <h2>Adress : G-1 , Aditraj Arced , Opp Tcc Mall , Nr Sima Hall , <br>100 Feet Road , Sattelite , Ahmedabad , Gujarat 
 		   </h2><br><br>
 		   <h3>Buisness Owner: Brijesh Prajapati
 		   </h3><br><br>
