--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@ SHIVAY FASHION STUDIO
            <div class="main">
 		   <ul>
 		   <li class="inactive"><a href="index.html">HOME</a></li>
-		   <li class="inactive"><a href="#">ITEMS</a></li>
+		   <li class="inactive"><a href="item.html">ITEMS</a></li>
 		   <li class="active"><a href="contact.html">CONTACT US</a></li>
 		   
 		   </ul>
@@ -23,7 +23,7 @@ SHIVAY FASHION STUDIO
 		   </div>
 		   <div class="centerdiv">
 		   
-		   <a class="btn" href="https://instagram.com/brij11118?igshid=16dzn103e3b0u" target="_blank">Instagram</a>
+		   <a class="btn" href="https://instagram.com/shivayfashionstudios?igshid=lgvanztz109q" target="_blank">Instagram</a>
 		   <a class="btn" href="https://m.facebook.com/profile.php?id=100028127886986&ref=content_filter" target="_blank">Facebook</a>
 		   <a class="btn" href="https://chat.whatsapp.com/D54DF2iOQRQ853SYakc8y1" target="_blank">Whatsapp</a>
 		   <br><br><br><h1>
